...
- (UIButton*)btn_1 {
    if (!_btn_1) {
        _btn_1 = [UIButton buttonWithType:UIButtonTypeCustom];
        _btn_1.backgroundColor = [UIColor colorWithRed:245 / 250.0 green:245 / 250.0 blue:245 / 250.0 alpha:1];
        _btn_1.layer.cornerRadius = (SCREEN_WIDTH / 5 - 40) / 2.0;
        _btn_1.layer.masksToBounds = YES;
        [_btn_1 setImage:[UIImage imageNamed:@"firstImg"] forState:UIControlStateNormal];
        
        _btn_1.tag = 1;
        [_btn_1 addTarget:self action:@selector(clickButton:) forControlEvents:UIControlEventTouchUpInside];
    }
    return _btn_1;
}
...
- (UIButton*)btn_2 {
    if (!_btn_2) {
        _btn_2 = [UIButton buttonWithType:UIButtonTypeCustom];
        _btn_2.backgroundColor = [UIColor colorWithRed:245 / 250.0 green:245 / 250.0 blue:245 / 250.0 alpha:1];
        _btn_2.layer.cornerRadius = (SCREEN_WIDTH / 5 - 20) / 2.0;
        _btn_2.layer.masksToBounds = YES;
        [_btn_2 setImage:[UIImage imageNamed:@"twoImg"] forState:UIControlStateNormal];
        
        _btn_2.tag = 2;
        [_btn_2 addTarget:self action:@selector(clickButton:) forControlEvents:UIControlEventTouchUpInside];
    }
    return _btn_2;
}
...
- (UIButton*)btn_3 {
    if (!_btn_3) {
        _btn_3 = [UIButton buttonWithType:UIButtonTypeCustom];
        _btn_3.backgroundColor = [UIColor colorWithRed:245 / 250.0 green:245 / 250.0 blue:245 / 250.0 alpha:1];
        _btn_3.layer.cornerRadius = (SCREEN_WIDTH / 5 - 40) / 2.0;
        _btn_3.layer.masksToBounds = YES;
        [_btn_3 setImage:[UIImage imageNamed:@"threeImg"] forState:UIControlStateNormal];
        
        _btn_3.tag = 3;
        [_btn_3 addTarget:self action:@selector(clickButton:) forControlEvents:UIControlEventTouchUpInside];
    }
    return _btn_3;
}
...
- (UIButton*)btn_4 {
    if (!_btn_4) {
        _btn_4 = [UIButton buttonWithType:UIButtonTypeCustom];
        _btn_4.backgroundColor = [UIColor colorWithRed:245 / 250.0 green:245 / 250.0 blue:245 / 250.0 alpha:1];
        _btn_4.layer.cornerRadius = (SCREEN_WIDTH / 5 - 20) / 2.0;
        _btn_4.layer.masksToBounds = YES;
        [_btn_4 setImage:[UIImage imageNamed:@"fourImg"] forState:UIControlStateNormal];
        
        _btn_4.tag = 4;
        [_btn_4 addTarget:self action:@selector(clickButton:) forControlEvents:UIControlEventTouchUpInside];
    }
    return _btn_4;
}
...
