...
}

- (UIButton*)loginButton {
    if (!_loginButton) {
        _loginButton = [UIButton buttonWithType:UIButtonTypeSystem];
        _loginButton.backgroundColor = [UIColor colorWithRed:0.8 green:0 blue:0.3 alpha:1];
        [_loginButton setTitle:@"Log In" forState:UIControlStateNormal];
        [_loginButton setTintColor:[UIColor whiteColor]];
        _loginButton.titleLabel.font = [UIFont systemFontOfSize:15 weight:1];
        _loginButton.layer.cornerRadius = 20;
        _loginButton.layer.masksToBounds = YES;
        
        _loginButton.tag = 1;
...
